# deb-strip-copyright

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: deb822.rs  glob.rs  lib.rs  main.rs  parse_copyright.rs  strip.rs
src/deb822/: copyright.rs
tests/: glob.rs
tests/libfakeproject/: README.md
tests/libfakeproject/debian/: changelog  copyright
tests/libfakeproject/src/: illegal.py  main.py
