[package]
name = "deb-strip-copyright"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
eyre = "0.6.12"
# Audit: google/rust-crate-audits ub-risk-2
# https://lib.rs/crates/tar/audit
tar = "0.4.44"
# Audit: google/rust-crate-audits safe-to-run
# https://lib.rs/crates/xz2/audit
xz2 = "0.1.7"
