[package]
name = "deb-strip-copyright"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
env_logger = "0.11.8"
eyre = "0.6.12"
indicatif = "0.18.0"
log = "0.4.27"
# Audit: google/rust-crate-audits ub-risk-2
# https://lib.rs/crates/tar/audit
tar = "0.4.44"
# Audit: google/rust-crate-audits safe-to-run
# https://lib.rs/crates/xz2/audit
xz2 = "0.1.7"

[dev-dependencies]
# Bootleg fuzz testing
fastrand = "2.3.0"
